# BDL-Testing

./: .gitignore  TenderCheck_BDL_Report_v2.docx  TenderCheck_BDL_Report_v3.docx  pyproject.toml  run.py  start.bat  tendercheck.html  test_api.py  update_report.py
backend/: auth.py  database.py  main.py  models.py  nlp.py  pdf_extract.py  seed.py
frontend/: app.html  index.html  reports.html
